[package]
name = "pesto-assessment"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["form"] }
futures = "0.3.30"
libsql = "0.4.0"
minijinja = "2.0.2"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
